--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,15 @@
 
    <body>
        <p> welcome to the chat app</p>
-   </body>
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+           var socket = io();
+           socket.on('connect', () => {
+               console.log('Connected to server');
+           });
+           socket.on('disconnect', () => {
+               console.log('disconnected from server');
+           });
+        </script>
+    </body>
 </html>
