--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,7 @@
    <body>
        <p> welcome to the chat app</p>
         <script src="/socket.io/socket.io.js"></script>
-        <script>
-           var socket = io();
-           socket.on('connect', () => {
-               console.log('Connected to server');
-           });
-           socket.on('disconnect', () => {
-               console.log('disconnected from server');
-           });
+        <script src="/js/index.js">
         </script>
     </body>
 </html>
